# aganitha-task-pubmeb-fetcher

./: README.md
fetch_papers/: Fetch_Papers_PubMed_API_Fetcher.ipynb  README.md  cancer_research.csv  gene-therapy.csv  pyproject.toml
fetch_papers/.ipynb_checkpoints/: Fetch_Papers_PubMed_API_Fetcher-checkpoint.ipynb
fetch_papers/fetch_papers/: Fetch_Papers_PubMed_API_Fetcher.ipynb
fetch_papers/fetch_papers/.ipynb_checkpoints/: fetch_papers-checkpoint.py  get_papers_list-checkpoint.py
