[project]
name = "fetch-papers"
version = "0.1.0"
description = ""
authors = [
    {name = "Surendra Vasamsetti",email = "leelasurendravasamsetti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "fetch_papers.get_papers_list:main"


